; ModuleID = '/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mbuf_free.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/ESP8266_RTOS/user/extr_mongoose.c_mbuf_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mbuf_free(%struct.mbuf* %0) #0 {
  %2 = alloca %struct.mbuf*, align 8
  store %struct.mbuf* %0, %struct.mbuf** %2, align 8
  %3 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %4 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %9 = getelementptr inbounds %struct.mbuf, %struct.mbuf* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @MBUF_FREE(i32* %10)
  %12 = load %struct.mbuf*, %struct.mbuf** %2, align 8
  %13 = call i32 @mbuf_init(%struct.mbuf* %12, i32 0)
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @MBUF_FREE(i32*) #1

declare dso_local i32 @mbuf_init(%struct.mbuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
